@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
left to right direction
hide circles
hide methods

title Domain Model (Excerpt) - US2.2.3 Register & Update Docks

package "Dock Aggregate" {
    class EntityDock <<AggregateRoot>> {
        + Id: DockId
        + Code: DockCode
        + Location: string
        + LengthM: double
        + DepthM: double
        + MaxDraftM: double
        + Status: DockStatus
        --
        + PhysicalResourceCodes: Set<PhysicalResourceCode>
        + AllowedVesselTypeIds: Set<VesselTypeId>
    }

    class DockId <<ValueObject>>
    class DockCode <<ValueObject>>
    class PhysicalResourceCode <<ValueObject>>
    class VesselTypeId <<ValueObject>>
    enum DockStatus {
        Available
        Unavailable
        Maintenance
    }
}

' ---- Composition inside Dock ----
EntityDock "1" *-- "1" DockId : identifies >
EntityDock "1" *-- "1" DockCode : has >
EntityDock "1" o-- "0..*" PhysicalResourceCode : has >
EntityDock "1" o-- "0..*" VesselTypeId : allows >
EntityDock "1" ..> DockStatus : uses >

' ---- Cross-aggregate references ----
VesselTypeId "*" ..> "1" VesselType : refers to >
PhysicalResourceCode "*" ..> "1" PhysicalResource : refers to >

' ---- Vessel Visit assignment ----
VesselVisitNotification "*" --- "0..1" EntityDock : assigned to >

@enduml
